syntax = "proto3";

package greet;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message Sum {
  string first_num = 1;
  string last_num = 2;
}

message SumRequest {
  Sum sum = 1;
}

message SumResponse {
  string result = 1;
}

service  SumService {
  //Unary
  rpc Sum(SumRequest) returns (SumResponse){};
}